animation mobile fix

--- a/357ramowek/assets/style.css
+++ b/357ramowek/assets/style.css
@@ -36,6 +36,10 @@ a[href^="tel"] {
     animation-name: animate-fade;
     animation-delay: 0.5s;
     animation-fill-mode: backwards;
+    -webkit-animation-duration: 0.5s;
+    -webkit-animation-name: animate-fade;
+    -webkit-animation-delay: 0.5s;
+    -webkit-animation-fill-mode: backwards;
 }
 
 @keyframes animate-fade {
@@ -49,6 +53,18 @@ a[href^="tel"] {
     }
   }
 
+  @-webkit-keyframes animate-fade {
+    0% { 
+        margin-top:-15px;
+        opacity: 0; 
+    }
+    100% { 
+        margin-top:0px;
+        opacity: 1; 
+    }
+  }
+
+  
 .header {
     background-color: #333;
     color: #fff;
